fixed discount bubble positioning on mobile devices

--- a/_src-lp/blocks/c-productswithvpn2/c-productswithvpn2.scss
+++ b/_src-lp/blocks/c-productswithvpn2/c-productswithvpn2.scss
@@ -472,8 +472,17 @@
     .c-productswithvpn2 > div {
         width: 90%;
         padding: 10px;
-        margin: 0 auto 1em;
+        margin: 0 auto 4em;
         padding-bottom: 10px;
+    }
+
+    .c-productswithvpn2-container .c-productswithvpn2 .prod-percent {
+      margin-top: -4em;
+    }
+    
+    .c-productswithvpn2-container .c-productswithvpn2 .prod-percent.green_bck_circle {
+      position: absolute;
+      left: -1px;
     }
 
     .c-productswithvpn2.smaller-images {
